k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iacdharma
  labels:
    name: iacdharma
    environment: base
    app: iac-dharma-platform
